--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "emoji-mart": "^5.6.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
